# opencv_contrib

modules/intensity_transform/: CMakeLists.txt
modules/intensity_transform/include/opencv2/: intensity_transform.hpp
modules/intensity_transform/samples/: intensity_transform.cpp
modules/intensity_transform/src/: bimef.cpp  intensity_transform.cpp
modules/intensity_transform/test/: test_intensity_transform.cpp
